# tnef2mime

./: .gitmodules  Cargo.toml  README.md
docx2attr_common/: Cargo.toml
docx2attr_common/src/: lib.rs
ftdump/: Cargo.toml
ftdump/src/: main.rs
msox/: Cargo.toml
msox/src/: binread.rs  lib.rs  tnef_enums.rs
props_md2attr/: Cargo.toml  README.md
props_md2attr/src/: main.rs
tnef2mime/: Cargo.toml  README.md
tnef2mime/src/: binread.rs  guid.rs  main.rs
tnef2mime/src/tnef/: cfb_msg.rs  mod.rs  prop_enums.rs
tnef_docx2attr/: Cargo.toml  README.md
tnef_docx2attr/src/: main.rs
